# nsu_5_os

lab1/: CMakeLists.txt
lab1/src/1/: a.c  b.c  c_1.c  c_2.c  d.c  e.c
lab1/src/2/: a.c  b.c  c.c  d.c  e.c  f.c
lab1/src/3/: a.c  b.c
lab1/src/4/: a.c  b.c  c.c
lab1/src/5/: a.c
lab1/src/6/: a.c
lab1/src/6/my_thread/: my_thread.c  my_thread.h
lab1/src/7/: a.c  main.c  uthreadpool.c  uthreadpool.h  uthreadpool2.c
lab2/: CMakeLists.txt
lab2/src/1/: a.c  b.c
lab2/src/1/queue/: queue.c
lab2/src/2/: REPORT.md  queue_threads.c
lab2/src/2/queue_condvar/: queue.c  queue.h
lab2/src/2/queue_mutex/: queue.c  queue.h
lab2/src/2/queue_semaphore/: queue.c  queue.h
lab2/src/2/queue_spinlock/: queue.c  queue.h
lab2/src/3/: main.c
lab2/src/3/list/: list.c  list.h
lab2/src/3/lock/: lock.c  lock.h
lab2/src/3/routine/: routine.c  routine.h  routine_mutex.c  routine_rwlock.c  routine_spinlock.c
lab2/src/4/: test.c
lab2/src/4/mutex/: mutex.c  mutex.h
lab2/src/4/spinlock/: spinlock.c  spinlock.h
lab2/src/old/: Makefile
lab3/: CMakeLists.txt
lab3/include/: cache.h  chunk.h  common.h  context.h  handler.h  hashmap.h  http_utils.h  log.h  server.h  subscription.h  threadpool.h
lab3/src/: main.c
lab3/src/chunk/: cache.c  chunk.c  subscription.c
lab3/src/common/: common.c  hashmap.c
lab3/src/context/: context.c
lab3/src/handler/: handler.c  handler_new.c
lab3/src/http_utils/: http_utils.c
lab3/src/log/: log.c
lab3/src/server/: server.c
lab3/src/threadpool/: threadpool.c
lab3/test/: main.c
